<resources>
    <string name="app_name">FirstAid</string>
    <string name="title_activity_first_aid">FirstAidActivity</string>
    <string name="page0">Safe to Approach?"</string>
    <string name="page0_choice1">Yes</string>
    <string name="page0_choice2">No</string>
    <string name="page1">Removable Danger?"</string>
    <string name="page1_choice1">Yes</string>
    <string name="page1_choice2">No - Call 108</string>
    <string name="page2">Severe Bleed"</string>
    <string name="page2_choice1">Yes</string>
    <string name="page2_choice2">No</string>
    <string name="page3">Apply Indirect Pressure and Tourniquet"</string>
    <string name="page4">Are they Responsive?"</string>
    <string name="page4_choice1">Yes</string>
    <string name="page4_choice2">No</string>
    <string name="page5">Loading Timer"</string>
    <string name="page6">Get Help / Start CPR"</string>
    <string name="page7">Brain hemorrhage?"</string>
    <string name="page8">Loading Report"</string>
    <string name="done_button_text">Done</string>
    <string name="title_activity_quick_call">Map</string>
    <string name="view_report">View Report</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="view_reports">View Reports</string>
    <string name="logo">logo</string>
    <string name="call_108">Call 108</string>
    <string name="voice_input">Voice Input</string>
    <string name="name">Name</string>
    <string name="next_question">Next Question</string>
    <string name="speech_to_text_translation">Speech to text translation:</string>
    <string name="location">Location:</string>
    <string name="guide_start">Guide Start:</string>
    <string name="save_report">Save Report</string>
    <string name="incident_report">Incident Report</string>
    <string name="saved_reports">Saved Reports</string>
    <string name="delete_all">Delete All</string>
    <string name="check_breathing">Check Breathing  Press Start for 10 Second Timer</string>
    <string name="_0_1_breaths">0-1 BREATHS</string>
    <string name="_2_breaths">2+ BREATHS</string>
    <string name="home">Home</string>
    <string name="name_your_report">Name Your Report :</string>
    <string name="report_name">Report Name</string>
    <string name="How_to_make_first_aid_kit">
        <b>How do I make a first aid kit?\n\n</b>

    A well-stocked first aid kit is a must-have for treating minor injuries at home and on the go.\n
        You can buy a first aid kit or put one together on your own. Keep your supplies in a sturdy,
        clear plastic box so you can see what’s inside.\n\n
</string>
    <string name="What_should_be_in_my_first_aid_kit">
       <b>What should be in my first aid kit?\n\n</b>
1.	Adhesive tape\n
2.	Alcohol wipes\n
3.	Allergy medicine\n
4.	Aloe vera gel\n
5.	Antibiotic ointment\n
6.	Bandages in different sizes\n
7.	Calamine lotion\n
8.	Cold packs\n
9.	Elastic bandages\n
10.	Gauze rolls and pads\n
11.	Hand sanitizer (for your travel first aid kit)\n
12.	Hydrocortisone cream\n
13.	Latex-free gloves\n
14.	Pain relievers like acetaminophen and ibuprofen\n
15.	Saline wound wash\n
16.	Scissors and tweezers\n

    </string>
    <string name="Cuts_and_Scrapes">

       <b>How do I treat a minor cut or scrape?\n\n</b>
        Follow these steps to keep cuts clean and prevent infections and scars : \n
1.	Wash your hands. First, wash up with soap and water so you don’t get bacteria into the cut and cause an infection.
        If you’re on the go, use hand sanitizer.\n

2.	Stop the bleeding. Put pressure on the cut with a gauze pad or clean cloth. Keep the pressure on for a few minutes.\n
3.	Clean the wound. Once you’ve stopped the bleeding, rinse the cut under cool running water or use a saline wound wash.\n
        Clean the area around the wound with soap and a wet washcloth. Don’t get soap in the cut, because it can irritate the skin.\n
        And don’t use hydrogen peroxide or iodine, which could irritate the cut.\n
4.	Remove any dirt or debris. Use a pair of tweezers cleaned with alcohol to gently pick out any dirt, gravel, glass, or other material in the cut.\n\n

        <b>When do you need to call your doctor?\n\n</b>
Check with your doctor or go to the emergency room if : \n\n
5.	The cut is deep, long, or the edges are jagged. You may need stitchesand a tetanus shot.\n
6.	The cut or scrape is from a dirty or rusty object. You may need a tetanus shot.\n
7.	The injury is from an animal or human bite.\n
8.	You can’t stop the bleeding with direct pressure.\n
9.	You can’t get dirt out of the wound.\n
10.	The cut is on your face or near a joint, like on your fingers.\n
11.	The skin around the cut gets red and swollen or develops red streaks.\n
12.	Pus drains from the cut.\n
13.	You have a fever of more than 100.4 F (in either an adult or child).\n
    </string>
    <string name="Nosebleeds">
        <b>How do I treat a nosebleed?\n\n</b>
Nosebleeds usually look a lot worse than they are. Most of the time you can stop the flow with a few simple steps:\n
1.	Lean the head slightly forward, so blood doesn’t run down the throat.\n
2.	With a tissue or washcloth, gently press the nostrils together to stop the bleeding.\n
3.	Hold the nose for at least 5 minutes. Then check to see if the bleeding has stopped. If it hasn’t stopped, gently squeeze for another 10 minutes.\n


    </string>
    <string name="Splinters">
        <b>How do I remove a splinter?\n\n</b>
Splinters are more of an annoyance than real health problem, but if you’ve got one stuck in a finger or toe, you’ll want to get it out. How you remove a splinter depends on how deep it is.\n
If the splinter is sticking out of the skin:\n
1.	Wash the skin around the splinter with soap and water.\n
2.	Clean a pair of tweezers with a cotton swab dipped in alcohol.\n
3.	Grab the end of the splinter with the tweezers.\n
4.	Pull it out at the same angle as the splinter went in.\n
5.	Clean the skin again with soap and water.\n
If the splinter is under the skin:v
6.	Wash the skin around the splinter with soap and water.\n
7.	Clean a needle and tweezers with alcohol.\n
8.	Gently scrape away the skin above the splinter with the needle until you can see the top of the splinter.\n
9.	Grab the end of the splinter with the tweezers and pull it out at the same angle it went in.\n
10.	Clean the skin again with soap and water.\n


    </string>
    <string name="Animal_Bites_and_Insect_Stings">
        <b>How do I treat animal bites and scratches?\n\n</b>
Sometimes a seemingly friendly dog or cat can bite or scratch. If you or your child gets a bite, follow these steps to treat the wound:\n
•	Hold a towel or gauze to the area to stop the bleeding.\n
•	Clean the wound with soap and water.\n
•	Cover it with a clean bandage or gauze pad.\n\n
<b>When should I see a doctor for an animal bite?\n\n</b>
For any animal bite, you may need an antibiotic to prevent infection. So it’s always a good idea to call your doctor, especially if you have medical conditions that weaken your immune system. Also, you should call your doctor or head to the emergency room if:\n
•	The bite was caused by an animal you don’t know, or by any wild animal like a raccoon, skunk, or bat. You may need a tetanus or rabies vaccine.\n
•	The bite is large, or it doesn’t stop bleeding after you’ve held pressure on it for 15 minutes. It may need to be closed with stitches.\n
•	You think the bite may have damaged a bone, tendons, or nerves, because you can’t bend or straighten the body part or you’ve lost feeling in it.\n
•	The wound is red, swollen, or oozing fluid.\n


    </string>
    <string name="Minor_Burns">
        <b>What are the different types of burns?\n\n</b>
Grabbing a hot pot or splashing boiling water on your skin are just two common causes of burns around the house. When you get a burn, first check to see which type it is. Some are more serious than others.\n
•	First-degree burns are painful but minor. They turn red and may swell.\n
•	Second-degree burns form blisters. The skin may be very red and painful.\n
•	Third-degree burns make the skin look white or charred. The burns may not hurt because nerves have been damaged.\n\n
    <b>How do I treat burns?\n\n</b>
You can treat minor first-degree burns and small second-degree burns at home. Here’s what to do:\n
•	Place the burned area under running cool water for at least 5 minutes to reduce swelling.\n
•	Apply an antiseptic spray, antibiotic ointment, or aloe vera cream to soothe the area.\n
•	Loosely wrap a gauze bandage around the burn.\n
•	To relieve pain, take acetaminophen, ibuprofen, or naproxen.\n
Never put butter on a burn or pop any blisters that form. You could damage the skin and cause an infection.\n


    </string>
    <string name="Sprains_and_Strains">
        <b>What’s the difference between a sprain and strain?\n\n</b>
Sprains and strains are common injuries. Here’s how to tell the difference:\n
•	A sprain is a stretch or tear of a ligament, the tough tissue that connects bones and supports the joints. You’re most likely to get a sprain in the wrist or ankle. Sprains cause pain, bruising, and swelling. You may have trouble moving the joint.\n
•	A strain is an injury to a muscle or tendon, the thick tissue that attaches muscles to bones. You’re most likely to get a strain in your back or hamstring muscles. Strains cause pain, weakness, swelling, and muscle cramps. You may have trouble moving the muscle.\n\n
        <b>How do I treat sprains and strains?\n\n</b>
For a mild sprain or strain:\n
•	Rest the limb to give it a chance to heal.\n
•	Hold ice on the area for 20 minutes at a time, four to eight times a day, to bring down swelling. Don’t use heat -- it could make the area swell even more.\n
•	Wrap an elastic bandage or splint around the sprain or strain.\n
•	Put a pillow under the injured body part to keep it raised.\n
•	Take over-the-counter medicines such as ibuprofen to relieve the pain.\n
For a more severe sprain or strain, where there’s a lot of pain, swelling, and you have trouble moving around, see your doctor. You may need crutches or physical therapy.\n
    </string>
</resources>